[workspace]
resolver = "2"
members = ["client", "server"]

[workspace.dependencies]
futures = "0.3"
wasi = { git = "https://github.com/rvolosatovs/wasi", branch = "feat/p3" }

[patch.crates-io]
wasmparser = { git = "https://github.com/bytecodealliance/wasm-tools" }
wasm-encoder = { git = "https://github.com/bytecodealliance/wasm-tools" }
wit-parser = { git = "https://github.com/bytecodealliance/wasm-tools" }
wit-component = { git = "https://github.com/bytecodealliance/wasm-tools" }
wasm-metadata = { git = "https://github.com/bytecodealliance/wasm-tools" }
wit-bindgen = { git = "https://github.com/bytecodealliance/witx-bindgen" }
wit-bindgen-rt = { git = "https://github.com/bytecodealliance/witx-bindgen" }
wit-bindgen-rust-macro = { git = "https://github.com/bytecodealliance/witx-bindgen" }
